--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -248,3 +248,30 @@ ISSN={1662-5161},
     author={Alexis Koopmann and Kressa Fox and Phillip Raich and Jenna Webster},
     howpublished = {\url{https://my.ece.utah.edu/~kstevens/4710/reports/vr-robot.pdf}},
 }
+
+@misc{ross2011reduction,
+      title={A Reduction of Imitation Learning and Structured Prediction to No-Regret Online Learning}, 
+      author={Stephane Ross and Geoffrey J. Gordon and J. Andrew Bagnell},
+      year={2011},
+      eprint={1011.0686},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@misc{battaglia2018relational,
+      title={Relational inductive biases, deep learning, and graph networks}, 
+      author={Peter W. Battaglia and Jessica B. Hamrick and Victor Bapst and Alvaro Sanchez-Gonzalez and Vinicius Zambaldi and Mateusz Malinowski and Andrea Tacchetti and David Raposo and Adam Santoro and Ryan Faulkner and Caglar Gulcehre and Francis Song and Andrew Ballard and Justin Gilmer and George Dahl and Ashish Vaswani and Kelsey Allen and Charles Nash and Victoria Langston and Chris Dyer and Nicolas Heess and Daan Wierstra and Pushmeet Kohli and Matt Botvinick and Oriol Vinyals and Yujia Li and Razvan Pascanu},
+      year={2018},
+      eprint={1806.01261},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+
+@article{Ahn2021VersatileLP,
+  title={Versatile Locomotion Planning and Control for Humanoid Robots},
+  author={Junhyeok Ahn and Steven Jens Jorgensen and Seung Hyeon Bang and Luis Sentis},
+  journal={Frontiers in Robotics and AI},
+  year={2021},
+  volume={8}
+}
