--- a/thesis/content/chapter-real-robot.tex
+++ b/thesis/content/chapter-real-robot.tex
@@ -2,3 +2,11 @@
 
 In this chapter, I introduce the details of how our experiments are conducted on the real robot. 
 However, due to the complexity of the robot system, I need to first describe the infrastructure I built for collecting demonstrations and deploying the neural network policy. Specifically, I had build a real-time system to integrate the camera, grippers, whole-body controller, and the VR headset. 
+
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\linewidth]{robot-architecture.png}
+	\caption{}
+    \label{fig:robot-architecture}
+\end{figure}
