--- a/thesis/content/chapter-introduction.tex
+++ b/thesis/content/chapter-introduction.tex
@@ -22,10 +22,14 @@ To show that we can use the collected demonstrations to train a humanoid to perf
     \caption{An overview of the hierarchical learning framework used in this work. Diagram credit to Mingyo. First, we get the desired hand trajectories and walking commands from the demonstrator. Second, we send these commands to the whole-body controller to produce joint-torque actions of the robot. Third, a behavior cloning policy is trained to imitate the human demonstrations. }
     \label{fig:overview}
 \end{figure}
-First, we take advantage of the similar kinematic structures between the robot and demonstrators and collect demonstrations using immersive VR. 
-We only record the SE(3) pose of the hands and abstract away the other joint configurations. This lets us easily retarget human motions to the humanoid robot, which has fewer degrees of freedom in the arms. This also makes it easier to learn the motion, since the policy can delegate joint-space controls to the underlying controller. Then, we send the desired hand trajectories and walking commands to the whole-body controller to produce joint-torque actions of the robot. The controller prioritizes the robot's stability while tracking the hand and feet trajectories, so it may not track the trajectories perfectly. However, the human demonstrator can adapt to the tracking error by observing the effects of their actions in the VR headset. Finally, a behavior cloning policy is trained to imitate the human demonstrations. The policy needs to learn the state-action distribution of whole-body control behaviors and adapt to it in a closed-loop manner similar to the human. During deployment, the generated trajectories are passed to whole-body control just like during demonstration. The policy achieves reasonable success rate in simple simulation tasks, but it fails for more complex tasks involving manipulation while walking and precise motions. Future research directions to improve the policy will be discussed in the end. 
+\begin{enumerate}
+    \item First, we take advantage of the similar kinematic structures between the robot and demonstrators and collect demonstrations using immersive VR. 
+We only record the SE(3) pose of the hands and abstract away the other joint configurations. This lets us easily retarget human motions to the humanoid robot, which has fewer degrees of freedom in the arms. This also makes it easier to learn the motion, since the policy can delegate joint-space controls to the underlying controller. 
+\item Then, we send the desired hand trajectories and walking commands to the whole-body controller to produce joint-torque actions of the robot. The controller prioritizes the robot's stability while tracking the hand and feet trajectories, so it may not track the trajectories perfectly. However, the human demonstrator can adapt to the tracking error by observing the effects of their actions in the VR headset. The walking commands are implemented with a sequence-based DCM gait planner, which allows the user to take a step or turn the robot in one of the four directions. Since these commands are discrete, the locomotion is not very fluid or precise. 
+\item Finally, a behavior cloning policy is trained to imitate the human demonstrations. The policy needs to learn the state-action distribution of whole-body control behaviors and adapt to it in a closed-loop manner similar to the human. During deployment, the generated trajectories are passed to whole-body control just like during demonstration. The policy achieves reasonable success rate in simple simulation tasks, but it fails for more complex tasks involving manipulation while walking and precise motions. Future research directions to improve the policy will be discussed in the end. 
+\end{enumerate}
 
-In the below sections, I go into more details about the motivations for this project.
+In the below sections, more details about the motivations for this project are given.
 
 \section{Humanoid Robots}
 Humanoid robots have gained a lot of attention in recent years. After Boston Dynamic's Atlas made headlines by jumping and dancing with human-like dexterity \cite{atlas}, Tesla also entered the market by developing the cheap and mass-producible humanoid named Optimus. If the cost of the robot could be kept below \$20,000 like Elon Musk promised \cite{teslabot}, we would be entering a world where general purpose humanoids could replace humans for unsafe and repetitive tasks. Many startups are also getting a lot of funding recently to pursue humanoid robots. Apptronik is an Austin-based startup that aims to create humanoids that can work alongside people. One of their prototypes, DRACO 3, is the platform used for this thesis.
