--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -275,3 +275,10 @@ ISSN={1662-5161},
   year={2021},
   volume={8}
 }
+
+@misc{air-link,
+    title={How does Oculus Link Work? The Architecture, Pipeline and AADT Explained},
+    author={Volga Aksoy and Irad Ratmansky and Amanda Watson},
+    year={2019},
+    howpublished={Oculus Developer Blog}
+}
