--- a/thesis/content/chapter-real-robot.tex
+++ b/thesis/content/chapter-real-robot.tex
@@ -1,12 +1,13 @@
 \chapter{Real-Robot Experiments}
 
-In this chapter, I introduce the details of how our experiments are conducted on the real robot. 
-However, due to the complexity of the robot system, I need to first describe the infrastructure I built for collecting demonstrations and deploying the neural network policy. Specifically, I had build a real-time system to integrate the camera, grippers, whole-body controller, and the VR headset. 
-
+In this chapter, the details of how our experiments are conducted on the real robot are introduced. 
+However, due to the complexity of the robot system, the infrastructure built for collecting demonstrations and deploying the neural network policy needs to be described first. Specifically, a real-time system was build to integrate the camera, grippers, whole-body controller, and the VR headset. 
 
 \begin{figure}
 	\centering
 	\includegraphics[width=\linewidth]{robot-architecture.png}
-	\caption{}
+	\caption{The infrastructure used to collect demonstraions and deploy policy on the real robot}
     \label{fig:robot-architecture}
 \end{figure}
+
+
