--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -282,3 +282,11 @@ ISSN={1662-5161},
     year={2019},
     howpublished={Oculus Developer Blog}
 }
+
+@misc{distortion,
+    title={Correcting geometric distortions in stereoscopic 3D imaging},
+    author={Gao Z and Hwang A and Zhai G and Peli E},
+    year={2018},
+    journal={PLoS One},
+}
+
