--- a/thesis/content/chapter-simulation.tex
+++ b/thesis/content/chapter-simulation.tex
@@ -1,1 +1,9 @@
 \chapter{Simulation Experiments}
+
+In this section, the tasks used in simulation experiments and the results are presented. 
+
+\section{Tasks}
+
+The first environment is a door in a hallway. For the first task, the robot needs to grab the handle, turn it, and push the door open. The second task is a loco-manipulation task, where the robot needs to walk forward and push the door open. 
+
+The second environment is a kitchen. 
